externaldns-hellospringboot/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-hello
  labels:
    app: spring-boot-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-hello
  template:
    metadata:
      labels:
        app: spring-boot-hello
    spec:
      containers:
      - name: spring-cloud-discovery
        image: naresh240/spring-boot-hello:v2
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
