externaldns-hellospringboot/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-hello-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: spring-boot-hello
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
